--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "typescript-fsa-reducers",
-    "version": "1.2.1",
+    "name": "typescript-fsa-reducers-vanuan",
+    "version": "1.3.0",
     "description": "Fluent syntax for defining typesafe Redux reducers on top of typescript-fsa.",
     "main": "dist/index.js",
     "types": "dist/index",
@@ -70,6 +70,6 @@
         "typescript-fsa": "^3.0.0"
     },
     "peerDependencies": {
-        "typescript-fsa": "*"
+        "typescript-fsa-vanuan": "*"
     }
 }
